--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -14,11 +14,11 @@
 
 <div class="media-wrapper">
 
-    {% if post.image %}
-    <img src="{{ post.image.url }}" class="comment-media-thumb" onclick="openMedia('{{ post.image.url }}', 'image')">
+    {% if post.image and post.image.name %}
+    <img src="{{ post.image.url }}" class="comment-media-thumb">
     {% endif %}
 
-    {% if post.video %}
+    {% if post.video and post.video.name %}
     <button class="video-thumb" data-video-url="{{ post.video.url }}">
         ▶ 動画を見る
     </button>
