--- a/templates/blog/child_comments.html
+++ b/templates/blog/child_comments.html
@@ -52,10 +52,12 @@
             <img src="{{ reply.image.url }}" class="comment-media-thumb">
             {% endif %}
         
-            {% if reply.video and reply.video.name %}
-            <button class="video-thumb" data-video-url="{{ reply.video.url }}">
-                ▶ 動画を見る
-            </button>
+            {% if post.youtube_url %}
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/{{ post.youtube_url|youtube_id }}" frameborder="0" allowfullscreen
+                    loading="lazy">
+                </iframe>
+            </div>
             {% endif %}
         
             <!-- 返信への返信 -->
