--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -18,10 +18,12 @@
     <img src="{{ post.image.url }}" class="comment-media-thumb">
     {% endif %}
 
-    {% if post.video and post.video.name %}
-    <button class="video-thumb" data-video-url="{{ post.video.url }}">
-        ▶ 動画を見る
-    </button>
+    {% if post.youtube_url %}
+    <div class="video-wrapper">
+        <iframe src="https://www.youtube.com/embed/{{ post.youtube_url|youtube_id }}" frameborder="0" allowfullscreen
+            loading="lazy">
+        </iframe>
+    </div>
     {% endif %}
 
 </div>
