Fix youtube_extras filter

--- a/templates/blog/child_comments.html
+++ b/templates/blog/child_comments.html
@@ -1,6 +1,8 @@
 {% load comment_tags %}
-
+{% load youtube_extras %}
 {% load static %}
+{% extends "base.html" %}
+
 <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
 
 {% load comment_tags %}
