--- a/templates/blog/frontpage.html
+++ b/templates/blog/frontpage.html
@@ -1,7 +1,8 @@
 {% extends "base/diary_base.html" %}
-{% block body %}
-
+{% load youtube_extras %}
 {% load static %}
+
+{% block body %}
 <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
 
 
