--- a/accounts/templates/accounts/activate_success.html
+++ b/accounts/templates/accounts/activate_success.html
@@ -1,6 +1,11 @@
 {% extends "base/diary_base.html" %}
+
 {% block body %}
-<h2>登録完了</h2>
-<p>本登録が完了しました。ログインできます。</p>
-<a href="{% url 'accounts:login' %}">ログインへ</a>
+<h2>登録が完了しました 🎉</h2>
+
+<p>
+    メール認証が完了しました。ログインできます。
+</p>
+
+<a href="{% url 'accounts:login' %}">ログインする</a>
 {% endblock %}
