--- a/accounts/templates/accounts/activate_failed.html
+++ b/accounts/templates/accounts/activate_failed.html
@@ -4,11 +4,16 @@
 <h2>認証に失敗しました</h2>
 
 <p>
-    この認証リンクは無効、または期限切れです。
+    以下の理由が考えられます。
 </p>
 
+<ul>
+    <li>リンクの有効期限切れ</li>
+    <li>すでに認証済み</li>
+</ul>
+
 <p>
-    すでに登録が完了している場合は、そのままログインしてください。
+    もう一度ログインをお試しください。
 </p>
 
 <a href="{% url 'accounts:login' %}">ログイン画面へ</a>
