--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -20,19 +20,8 @@
     <img src="{{ post.image.url }}" class="comment-media-thumb">
     {% endif %}
 
-    {% if post.youtube_url %}
-    <div class="video-wrapper">
-        <iframe src="https://www.youtube.com/embed/{{ post.youtube_url|youtube_id }}" frameborder="0" allowfullscreen
-            loading="lazy">
-        </iframe>
-    
-        <p class="youtube-link">
-            ▶ 再生できない場合は
-            <a href="{{ post.youtube_url }}" target="_blank" rel="noopener">
-                YouTubeで見る
-            </a>
-        </p>
-    </div>
+    {% if post.video_url %}
+    {% include "blog/video_embed.html" with video_url=post.video_url %}
     {% endif %}
 
 </div>
