--- a/templates/blog/child_comments.html
+++ b/templates/blog/child_comments.html
@@ -23,7 +23,38 @@
         {% endif %}
 
         {% if comment.video_url %}
-        {% include "blog/video_embed.html" with video_url=comment.video_url %}
+        
+        {# YouTube #}
+        {% if "youtube.com" in comment.video_url or "youtube" in comment.video_url %}
+        <iframe width="100%" height="315"
+            src="https://www.youtube.com/embed/{{ comment.video_url|cut:'https://youtube/'|cut:'https://www.youtube.com/watch?v=' }}"
+            frameborder="0" allowfullscreen>
+        </iframe>
+        
+        {# TikTok #}
+        {% elif "tiktok.com" in comment.video_url %}
+        <blockquote class="tiktok-embed" cite="{{ comment.video_url }}"></blockquote>
+        <script async src="https://www.tiktok.com/embed.js"></script>
+        
+        {# Instagram #}
+        {% elif "instagram.com" in comment.video_url %}
+        <blockquote class="instagram-media" data-instagram-permalink="{{ comment.video_url }}">
+        </blockquote>
+        <script async src="//www.instagram.com/embed.js"></script>
+        
+        {# X (Twitter) #}
+        {% elif "x.com" in comment.video_url or "twitter.com" in comment.video_url %}
+        <blockquote class="twitter-tweet">
+            <a href="{{ comment.video_url }}"></a>
+        </blockquote>
+        <script async src="https://platform.twitter.com/widgets.js"></script>
+        
+        {# Facebook #}
+        {% elif "facebook.com" in comment.video_url %}
+        <iframe src="https://www.facebook.com/plugins/video.php?href={{ comment.video_url }}" width="100%" height="315"
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
+        </iframe>
+        
         {% endif %}
 
     </div>
@@ -48,7 +79,38 @@
             {% endif %}
 
             {% if reply.video_url %}
-            {% include "blog/video_embed.html" with video_url=reply.video_url %}
+            
+            {# YouTube #}
+            {% if "youtube.com" in reply.video_url or "youtube" in reply.video_url %}
+            <iframe width="100%" height="315"
+                src="https://www.youtube.com/embed/{{ reply.video_url|cut:'https://youtube/'|cut:'https://www.youtube.com/watch?v=' }}"
+                frameborder="0" allowfullscreen>
+            </iframe>
+            
+            {# TikTok #}
+            {% elif "tiktok.com" in reply.video_url %}
+            <blockquote class="tiktok-embed" cite="{{ reply.video_url }}"></blockquote>
+            <script async src="https://www.tiktok.com/embed.js"></script>
+            
+            {# Instagram #}
+            {% elif "instagram.com" in reply.video_url %}
+            <blockquote class="instagram-media" data-instagram-permalink="{{ reply.video_url }}">
+            </blockquote>
+            <script async src="//www.instagram.com/embed.js"></script>
+            
+            {# X (Twitter) #}
+            {% elif "x.com" in reply.video_url or "twitter.com" in reply.video_url %}
+            <blockquote class="twitter-tweet">
+                <a href="{{ reply.video_url }}"></a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js"></script>
+            
+            {# Facebook #}
+            {% elif "facebook.com" in reply.video_url %}
+            <iframe src="https://www.facebook.com/plugins/video.php?href={{ reply.video_url }}" width="100%" height="315"
+                style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
+            </iframe>
+            
             {% endif %}
 
             <!-- 返信への返信 -->
