--- a/templates/blog/frontpage.html
+++ b/templates/blog/frontpage.html
@@ -41,19 +41,39 @@
     {% endif %}
 
     <!-- 🔽 動画サムネ -->
-    {% if post.youtube_url %}
-    <div class="video-wrapper">
-        <iframe src="https://www.youtube.com/embed/{{ post.youtube_url|youtube_id }}" frameborder="0" allowfullscreen
-            loading="lazy">
-        </iframe>
+    {% if post.video_url %}
     
-        <p class="youtube-link">
-            ▶ 再生できない場合は
-            <a href="{{ post.youtube_url }}" target="_blank" rel="noopener">
-                YouTubeで見る
-            </a>
-        </p>
-    </div>
+    {# YouTube #}
+    {% if "youtube.com" in post.video_url or "youtube" in post.video_url %}
+    <iframe width="100%" height="315"
+        src="https://www.youtube.com/embed/{{ post.video_url|cut:'https://youtube/'|cut:'https://www.youtube.com/watch?v=' }}"
+        frameborder="0" allowfullscreen>
+    </iframe>
+    
+    {# TikTok #}
+    {% elif "tiktok.com" in post.video_url %}
+    <blockquote class="tiktok-embed" cite="{{ post.video_url }}"></blockquote>
+    <script async src="https://www.tiktok.com/embed.js"></script>
+    
+    {# Instagram #}
+    {% elif "instagram.com" in post.video_url %}
+    <blockquote class="instagram-media" data-instagram-permalink="{{ post.video_url }}">
+    </blockquote>
+    <script async src="//www.instagram.com/embed.js"></script>
+    
+    {# X (Twitter) #}
+    {% elif "x.com" in post.video_url or "twitter.com" in post.video_url %}
+    <blockquote class="twitter-tweet">
+        <a href="{{ post.video_url }}"></a>
+    </blockquote>
+    <script async src="https://platform.twitter.com/widgets.js"></script>
+    
+    {# Facebook #}
+    {% elif "facebook.com" in post.video_url %}
+    <iframe src="https://www.facebook.com/plugins/video.php?href={{ post.video_url }}" width="100%" height="315"
+        style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
+    </iframe>
+    
     {% endif %}
 
     <br>
