--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -22,36 +22,30 @@
 
     {% if post.video_url %}
     
-    {# YouTube #}
-    {% if "youtube.com" in post.video_url or "youtube" in post.video_url %}
+    {% if "youtube.com" in post.video_url or "youtu.be" in post.video_url %}
     <iframe width="100%" height="315"
-        src="https://www.youtube.com/embed/{{ post.video_url|cut:'https://youtube/'|cut:'https://www.youtube.com/watch?v=' }}"
+        src="https://www.youtube.com/embed/{{ post.video_url|cut:'https://www.youtube.com/watch?v='|cut:'https://youtu.be/' }}"
         frameborder="0" allowfullscreen>
     </iframe>
     
-    {# TikTok #}
     {% elif "tiktok.com" in post.video_url %}
     <blockquote class="tiktok-embed" cite="{{ post.video_url }}"></blockquote>
-    <script async src="https://www.tiktok.com/embed.js"></script>
     
-    {# Instagram #}
     {% elif "instagram.com" in post.video_url %}
-    <blockquote class="instagram-media" data-instagram-permalink="{{ post.video_url }}">
+    <blockquote class="instagram-media" data-instgrm-permalink="{{ post.video_url }}">
     </blockquote>
-    <script async src="//www.instagram.com/embed.js"></script>
     
-    {# X (Twitter) #}
     {% elif "x.com" in post.video_url or "twitter.com" in post.video_url %}
     <blockquote class="twitter-tweet">
         <a href="{{ post.video_url }}"></a>
     </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js"></script>
     
-    {# Facebook #}
     {% elif "facebook.com" in post.video_url %}
     <iframe src="https://www.facebook.com/plugins/video.php?href={{ post.video_url }}" width="100%" height="315"
         style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
     </iframe>
+    
+    {% endif %}
     
     {% endif %}
 
@@ -83,5 +77,9 @@
 
 
 <script src="{% static 'blog/js/blog.js' %}"></script>
+
+<script async src="https://www.tiktok.com/embed.js"></script>
+<script async src="//www.instagram.com/embed.js"></script>
+<script async src="https://platform.twitter.com/widgets.js"></script>
 
 {% endblock %}
