--- a/templates/blog/video_embed.html
+++ b/templates/blog/video_embed.html
@@ -1,20 +1,40 @@
-{% if "youtube" in video_url %}
-<iframe
-    src="https://www.youtube.com/embed/{{ video_url|cut:'https://youtu.be/'|cut:'https://www.youtube.com/watch?v=' }}"
-    width="560" height="315" frameborder="0" allowfullscreen></iframe>
+{% if video_url %}
+
+{% if "youtube.com" in video_url or "youtu.be" in video_url %}
+<iframe width="100%" height="315"
+    src="https://www.youtube.com/embed/{{ video_url|cut:'https://www.youtube.com/watch?v='|cut:'https://youtu.be/' }}"
+    frameborder="0" allowfullscreen>
+</iframe>
 
 {% elif "tiktok.com" in video_url %}
-<iframe src="https://www.tiktok.com/embed/v2/{{ video_url|slice:'-19:' }}" width="325" height="580"
-    frameborder="0"></iframe>
+<blockquote class="tiktok-embed" cite="{{ video_url }}">
+    <a href="{{ video_url }}"></a>
+</blockquote>
+<script async src="https://www.tiktok.com/embed.js"></script>
 
 {% elif "instagram.com" in video_url %}
-<iframe src="{{ video_url }}embed" width="400" height="480" frameborder="0"></iframe>
+<blockquote class="instagram-media" data-instgrm-permalink="{{ video_url }}" data-instgrm-version="14">
+    <a href="{{ video_url }}"></a>
+</blockquote>
+<script async src="https://www.instagram.com/embed.js"></script>
 
-{% elif "twitter.com" in video_url or "x.com" in video_url %}
-<blockquote class="twitter-tweet"><a href="{{ video_url }}"></a></blockquote>
+{% elif "x.com" in video_url or "twitter.com" in video_url %}
+<blockquote class="twitter-tweet">
+    <a href="{{ video_url }}"></a>
+</blockquote>
 <script async src="https://platform.twitter.com/widgets.js"></script>
 
 {% elif "facebook.com" in video_url %}
-<iframe src="https://www.facebook.com/plugins/video.php?href={{ video_url|urlencode }}" width="500" height="280"
-    frameborder="0"></iframe>
+<iframe src="https://www.facebook.com/plugins/video.php?href={{ video_url|urlencode }}" width="100%" height="315"
+    style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
+</iframe>
+
+{% endif %}
+
+<p>
+    <a href="{{ video_url }}" target="_blank" rel="noopener">
+        ▶ 動画を開く
+    </a>
+</p>
+
 {% endif %}
