--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -20,46 +20,7 @@
     <img src="{{ post.image.url }}" class="comment-media-thumb">
     {% endif %}
 
-    {% if post.video_url %}
-    
-        {% if "youtube.com" in post.video_url or "youtu.be" in post.video_url %}
-        <iframe width="100%" height="315"
-            src="https://www.youtube.com/embed/{{ post.video_url|cut:'https://www.youtube.com/watch?v='|cut:'https://youtu.be/' }}"
-            frameborder="0" allowfullscreen>
-        </iframe>
-        
-        {% elif "tiktok.com" in post.video_url %}
-        <blockquote class="tiktok-embed" cite="{{ post.video_url }}" data-video-id="">
-            <a href="{{ post.video_url }}"></a>
-        </blockquote>
-        <script async src="https://www.tiktok.com/embed.js"></script>
-        
-        {% elif "instagram.com" in post.video_url %}
-        <blockquote class="instagram-media" data-instgrm-permalink="{{ post.video_url }}" data-instgrm-version="14">
-            <a href="{{ post.video_url }}"></a>
-        </blockquote>
-        <script async src="https://www.instagram.com/embed.js"></script>
-        
-        {% elif "x.com" in post.video_url or "twitter.com" in post.video_url %}
-        <blockquote class="twitter-tweet">
-            <a href="{{ post.video_url }}"></a>
-        </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js"></script>
-        
-        {% elif "facebook.com" in post.video_url %}
-        <iframe src="https://www.facebook.com/plugins/video.php?href={{ post.video_url|urlencode }}" width="100%" height="315"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
-        </iframe>
-        
-        {% endif %}
-
-        <p>
-            <a href="{{ post.video_url }}" target="_blank" rel="noopener">
-                ▶ 動画を開く
-            </a>
-        </p>
-    
-    {% endif %}
+    {% include "blog/_video_embed.html" with video_url=post.video_url %}
 
 </div>
 
