--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -20,7 +20,7 @@
     <img src="{{ post.image.url }}" class="comment-media-thumb">
     {% endif %}
 
-    {% include "blog/_video_embed.html" with video_url=post.video_url %}
+    {% include "blog/video_embed.html" with video_url=post.video_url %}
 
 </div>
 
