--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,16 +2,17 @@
 {% extends "base/diary_base.html" %}
 {% block body %}
 <h2>ログイン</h2>
+
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+
+    {% if request.GET.next %}
+    <input type="hidden" name="next" value="{{ request.GET.next }}">
+    {% endif %}
+
     <button type="submit">ログイン</button>
 </form>
-<p>新規登録は<a href="{% url 'accounts:signup' %}">こちら</a></p>
 
-<!-- ログイン後に遷移したい元のページがあれば、URLのqueryパラメータでnextを渡す -->
-{% if request.GET.next %}
-<input type="hidden" name="next" value="{{ request.GET.next }}">
-{% endif %}
-
+<p>新規登録は<a href="{% url 'accounts:signup' %}?next={{ request.GET.next }}">こちら</a></p>
 {% endblock %}
