--- a/accounts/templates/accounts/activate_success.html
+++ b/accounts/templates/accounts/activate_success.html
@@ -7,5 +7,7 @@
     メール認証が完了しました。ログインできます。
 </p>
 
-<a href="{% url 'accounts:login' %}">ログインする</a>
+<a href="{% url 'login' %}{% if next %}?next={{ next }}{% endif %}">
+    ログインする
+</a>
 {% endblock %}
