--- a/templates/blog/video_embed.html
+++ b/templates/blog/video_embed.html
@@ -1,40 +1,43 @@
 {% if video_url %}
 
-{% if "youtube.com" in video_url or "youtu.be" in video_url %}
-<iframe width="100%" height="315"
-    src="https://www.youtube.com/embed/{{ video_url|cut:'https://www.youtube.com/watch?v='|cut:'https://youtu.be/' }}"
-    frameborder="0" allowfullscreen>
-</iframe>
+    {% if not user.is_authenticated %}
+    <!-- 🔒 未ログイン用 -->
+    <div class="video-placeholder">
+        <span class="video-label">
+            <a href="{% url 'login' %}?next={{ request.path }}">
+                ログインすると動画を視聴できます
+            </a>
+        </span>
+    </div>
 
-{% elif "tiktok.com" in video_url %}
-<blockquote class="tiktok-embed" cite="{{ video_url }}">
-    <a href="{{ video_url }}"></a>
-</blockquote>
-<script async src="https://www.tiktok.com/embed.js"></script>
+    {% else %}
+    <!-- ✅ ログイン済：動画っぽい四角 -->
+        <div class="video-placeholder">
 
-{% elif "instagram.com" in video_url %}
-<blockquote class="instagram-media" data-instgrm-permalink="{{ video_url }}" data-instgrm-version="14">
-    <a href="{{ video_url }}"></a>
-</blockquote>
-<script async src="https://www.instagram.com/embed.js"></script>
+            {% if "youtube.com" in video_url or "youtu.be" in video_url %}
+            <span class="video-label youtube">YouTube 動画</span>
 
-{% elif "x.com" in video_url or "twitter.com" in video_url %}
-<blockquote class="twitter-tweet">
-    <a href="{{ video_url }}"></a>
-</blockquote>
-<script async src="https://platform.twitter.com/widgets.js"></script>
+            {% elif "tiktok.com" in video_url %}
+            <span class="video-label tiktok">TikTok 動画</span>
 
-{% elif "facebook.com" in video_url %}
-<iframe src="https://www.facebook.com/plugins/video.php?href={{ video_url|urlencode }}" width="100%" height="315"
-    style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen>
-</iframe>
+            {% elif "instagram.com" in video_url %}
+            <span class="video-label instagram">Instagram 動画</span>
 
-{% endif %}
+            {% elif "x.com" in video_url or "twitter.com" in video_url %}
+            <span class="video-label twitter">X 動画</span>
 
-<p>
-    <a href="{{ video_url }}" target="_blank" rel="noopener">
-        ▶ 動画を開く
-    </a>
-</p>
+            {% elif "facebook.com" in video_url %}
+            <span class="video-label facebook">Facebook 動画</span>
+
+            {% else %}
+            <span class="video-label">動画</span>
+            {% endif %}
+
+            <a href="{{ video_url }}" target="_blank" rel="noopener" class="video-overlay">
+                play
+            </a>
+        </div>
+
+    {% endif %}
 
 {% endif %}
