--- a/templates/blog/video_embed.html
+++ b/templates/blog/video_embed.html
@@ -14,26 +14,26 @@
     <!-- ✅ ログイン済：動画っぽい四角 -->
         <div class="video-placeholder">
 
-            {% if "youtube.com" in video_url or "youtu.be" in video_url %}
+            {% if "youtube.com" in post.video_url or "youtu.be" in video_url %}
             <span class="video-label youtube">YouTube 動画</span>
 
-            {% elif "tiktok.com" in video_url %}
+            {% elif "tiktok.com" in post.video_url %}
             <span class="video-label tiktok">TikTok 動画</span>
 
-            {% elif "instagram.com" in video_url %}
-            <span class="video-label instagram">Instagram 動画</span>
+            {% elif "instagram.com" in post.video_url %}
+            <span class="video-label instagram">Instagram リンク</span>
 
-            {% elif "x.com" in video_url or "twitter.com" in video_url %}
-            <span class="video-label twitter">X 動画</span>
+            {% elif "x.com" in post.video_url or "twitter.com" in video_url %}
+            <span class="video-label twitter">X リンク</span>
 
-            {% elif "facebook.com" in video_url %}
-            <span class="video-label facebook">Facebook 動画</span>
+            {% elif "facebook.com" in post.video_url %}
+            <span class="video-label facebook">Facebook リンク</span>
 
             {% else %}
             <span class="video-label">動画</span>
             {% endif %}
 
-            <a href="{{ video_url }}" target="_blank" rel="noopener" class="video-overlay">
+            <a href="{{ post.video_url }}" target="_blank" rel="noopener" class="video-overlay">
                 play
             </a>
         </div>
